# cline-pyproject-template

./: .env.example  .gitignore  README.md  TEMPLATE_README.md  pyproject.toml
.cline_setup/: fetch_rules.py
.clinerules/ai/: memory-bank.md
.clinerules/development/: baby-steps.md  code-review.md  testing-strategy.md
.clinerules/python/: python-style.md
.github/workflows/: ci.yml
memory_bank/: activeContext.md  changelog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
